--- a/install/lang/korean.txt
+++ b/install/lang/korean.txt
@@ -62,6 +62,7 @@ ImDisk 가상 디스크 마운트 해제
 ImDisk - 설치
 드라이버 제거 (재부팅 필요 없음)
 설정 제거
+TEMP 변수 재설정
 설치 제거
 취소
 ImDisk 가상 디스크가 탐지되었습니다.#기존 ImDisk 가상 디스크가 모두 마운트 해제됩니다!
@@ -117,6 +118,7 @@ AWE 물리적 메모리 사용
 동적 RamDisk 매개 변수...
 마운트 지점 사용:
 마운트 해제
+장착 후 실행:
 추가 매개 변수:
 기본값
 0.5 KB
@@ -135,6 +137,7 @@ AWE 물리적 메모리 사용
 기본값: 사용 불가능합니다.##드라이브 문자 대신 폴더를 사용하여 ramdisk를 마운트합니다.
 선택한 ImDisk 마운트 지점을 마운트 해제하고 등록을 취소합니다.
 마운트 지점은 NTFS 볼륨에 있는 빈 디렉터리여야 합니다.#Windows 시작 시 마운트되도록 최대 10개의 마운트 지점을 등록할 수 있습니다.
+볼륨이 준비되면 (포맷 및 데이터 복사) 지정된 파일을 실행합니다.#실행 파일 또는 명령 파일이 될 수 있습니다.#파일은 세션 0 ("System" 사용자)에서 실행되며, 이는 어떤 창도#표시되지 않음을 의미합니다.
 GUI에서 아직 사용하지 않는 매개 변수를 여기에 추가할 수 있습니다.#예를 들어, "-o rem"은 드라이브에 이동식 속성을 추가합니다.#모든 파라미터를 나열하려면 "..." 버튼을 클릭합니다.
 
 데이터
@@ -171,6 +174,8 @@ RamDisk에서 제거된 데이터 삭제
 오류: 볼륨을 마운트할 수 없습니다.
 파일 복사 중...
 오류: 파일을 복사할 수 없습니다.
+사용자 명령 실행...
+오류: 사용자 명령을 실행할 수 없습니다.
 새 드라이브 표시 중...
 매개 변수를 저장하는 중...
 경고: 마운트 지점이 너무 많습니다.#등록되지 않습니다.
