--- a/install/lang/russian.txt
+++ b/install/lang/russian.txt
@@ -62,6 +62,7 @@ ImDisk - Создатели
 ImDisk - Удаление
 Удалить драйвер (не требует перезагрузки)
 Удалить настройки
+Восстановить переменные TEMP и TMP
 Удаление
 Отмена
 Обнаружен виртуальный диск ImDisk.#Все виртуальные диски ImDisk будут демонтированы!
@@ -99,7 +100,7 @@ OK
 Файловая система:
 Автоподключать вместе с Windows
 Создавать папку Temp
-Переменные среды Temp
+Переменные среды TEMP
 Мин: %d %s
 Макс: %d %s
 Память будет выделяться динамически, по мере заполнения.#Работает медленнее, однако помогает экономить память,#если используется незначительная часть объёма RAM-диска.
@@ -117,6 +118,7 @@ OK
 Настроить динамический RAM-диск...
 Подключить к пустой папке:
 Отключить
+Выполнить после монтирования:
 Дополнительные параметры командной строки:
 Стандартный
 0.5 КБ
@@ -135,6 +137,7 @@ OK
 По умолчанию: отключено.##Использовать папку вместо буквы диска, чтобы монтировать RAM-диск.#Работает только на файловой системе NTFS.
 Отключить выбранную точку подключения ImDisk и отменить ее регистрацию.
 Точка подключения должна быть пустой NTFS-папкой.#Можно создавать автоматически при запуске Windows до 10 точек подключения.
+Как только том будет готов (то есть отформатирован и на него будут загружены данные),#будет выполнен указанный файл.#В качестве него могут выступать командный или исполняемый файл.#Файл будет выполнен в сеансе 0 (под пользователем «Система»),#что означает отсутствие видимости окна выполнения.
 Вы можете указать дополнительные параметры командной строки.#Например, "-o rem" добавляет носителю атрибут "Съёмный".#Нажмите кнопку "...", чтобы ознакомиться со списком параметров.
 
 Данные
@@ -171,6 +174,8 @@ OK
 Ошибка: не удается подключить том.
 Копирование файлов...
 Ошибка: не удается скопировать файлы.
+Выполнение команды после монтирования...
+Ошибка: не удается выполнить команду после монтирования.
 Показ нового диска...
 Сохранение параметров...
 Внимание: слишком много точек подключения.#Текущая не будет зарегистрирована.
@@ -179,9 +184,9 @@ OK
 Отключение тома...
 Синхронизация...
 
-Использовать переменные среды TEMP 
-Личная:
-Системная:
+Использовать переменные среды TEMP и TMP
+Личные:
+Системные:
 Установить в:
 Использовать точку соединения Junction
 из:
