--- a/install/lang/schinese.txt
+++ b/install/lang/schinese.txt
@@ -62,6 +62,7 @@ RamDisk 设置
 ImDisk - 安装
 卸载驱动 (无需重启)
 删除设置
+重置TEMP变量
 卸载
 取消
 检测到 ImDisk 虚拟磁盘.#所有已挂载的 ImDisk 虚拟磁盘都将被卸载!
@@ -117,6 +118,7 @@ GB
 动态内存分配设置...
 使用挂载点:
 卸载
+挂载后运行：
 额外参数:
 默认
 0.5 KB
@@ -135,6 +137,7 @@ GB
 默认: 禁用.##装载RamDisk到文件夹而不是分配盘符。
 卸载选定的ImDisk挂载点并将其删除。
 挂载点必须是位于NTFS卷上的空目录。#最多可以设置10个挂载点在Windows启动时装载。
+当卷待命时（已完成格式化和数据复制），运行指定的文件。#该文件可以是应用程序或批处理文件。#该文件将在会话0（"系统"用户）中执行，因此不会显示任何窗口。
 您可以在这里添加GUI尚未支持的任何参数。#例如, "-o rem" 将向驱动器添加可移动属性。#点击 "..." 按钮列出所有参数。
 
 数据
@@ -171,6 +174,8 @@ GB
 错误：无法装入卷。
 复制文件...
 错误: 无法复制文件。
+运行用户命令...
+错误：无法运行用户命令。
 显示新驱动器...
 保存参数...
 警告：挂载点过多#此挂载点将不会保存
