--- a/install/lang/russian.txt
+++ b/install/lang/russian.txt
@@ -5,7 +5,7 @@ ImDisk - Установка
 Папка установки:
  Компоненты 
 Драйвер ImDisk (необходим)
-Библиотеки DiscUtils (нужен NET Framework 4)
+Библиотеки DiscUtils (нужен NET Framework 4.8)
 Утилита настройки RAM-диска
  Опции 
 Добавить команды в контекстное меню
@@ -28,7 +28,7 @@ ImDisk - Установка
 Ошибка: не удалось создать службу.
 Предыдущая установка была сделана в другую папку.#Удалить ее?
 Установка завершена.
-Установка завершена.##Дополнительно необходимо установить .NET Framework 4.#Без него Вам не удастся управлять образами в некоторых форматах.#Перейдите на <a href="https://www.microsoft.com/en-us/download/details.aspx?id=17113">Microsoft Download Center</a> для загрузки установщика.
+Установка завершена.##Дополнительно необходимо установить .NET Framework 4.8.#Без него Вам не удастся управлять образами в некоторых форматах.#Перейдите на <a href="https://dotnet.microsoft.com/download/dotnet-framework/net48">Microsoft Download Center</a> для загрузки установщика.
 ОК
 
 ImDisk - Создатели
@@ -47,6 +47,7 @@ ImDisk - Создатели
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
+- 正體中文(香港): 楊添明
 
 Основные настройки
 Удаление
