--- a/install/lang/russian.txt
+++ b/install/lang/russian.txt
@@ -48,6 +48,7 @@ ImDisk - Создатели
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
 - 正體中文(香港): 楊添明
+- türkçe: Mesut Akcan
 
 Основные настройки
 Удаление
