--- a/install/lang/tchinese.txt
+++ b/install/lang/tchinese.txt
@@ -48,6 +48,7 @@ ImDisk - 製作團隊
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
 - 正體中文(香港): 楊添明
+- türkçe: Mesut Akcan
 
 一般設定
 解除安裝
@@ -104,7 +105,7 @@ GB
 設定 TEMP 變數...
 最少： %d %s
 最多： %d %s
-相對於完整地分配記憶體，記憶體只會在實際使用時#才會分配記憶體。##啟用這個選項速度上會較慢，但於只使用記憶體磁碟#少部份空間的情況下，可以節省很多記憶體空間。
+相對於完整地分配記憶體，只會在實際使用記憶體磁碟#的空間時，才會分配記憶體。##啟用這個選項速度上會較慢，但於只使用記憶體磁碟#少部份空間的情況下，可以節省很多記憶體空間。
 解除掛載已選取的 ImDisk 磁碟機並且將其解除註冊。
 預設值： NTFS。##*FAT* 檔案系統通常會較快但會缺少一些功能。#FAT 及 FAT32 同樣會有磁碟區大小上限。
 在建立後將記憶體磁碟註冊成在 Windows 開機同時啟動。#可註冊多個記憶體磁碟機。
