--- a/install/lang/brazilian-portuguese.txt
+++ b/install/lang/brazilian-portuguese.txt
@@ -48,6 +48,7 @@ Traduções:
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
 - 正體中文(香港): 楊添明
+- türkçe: Mesut Akcan
 
 Configurações Gerais
 Desinstalar
