--- a/install/lang/finnish.txt
+++ b/install/lang/finnish.txt
@@ -48,6 +48,7 @@ Käännökset:
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
 - 正體中文(香港): 楊添明
+- türkçe: Mesut Akcan
 
 Yleiset asetukset
 Poista asennus
