--- a/install/lang/french.txt
+++ b/install/lang/french.txt
@@ -48,6 +48,7 @@ Traductions :
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
 - 正體中文(香港): 楊添明
+- türkçe: Mesut Akcan
 
 Réglages Généraux
 Désinstaller
