--- a/install/lang/german.txt
+++ b/install/lang/german.txt
@@ -48,6 +48,7 @@ ImDisk - Mitwirkende
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
 - 正體中文(香港): 楊添明
+- türkçe: Mesut Akcan
 
 Allgemeine Einstellungen
 Deinstallation
