--- a/install/lang/hungarian.txt
+++ b/install/lang/hungarian.txt
@@ -48,6 +48,7 @@ Fordítások:
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
 - 正體中文(香港): 楊添明
+- türkçe: Mesut Akcan
 
 Általános beállítások
 Eltávolítás
