--- a/install/lang/italian.txt
+++ b/install/lang/italian.txt
@@ -48,6 +48,7 @@ Traduzioni:
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
 - 正體中文(香港): 楊添明
+- türkçe: Mesut Akcan
 
 Impostazioni Generali
 Disinstalla
