--- a/install/lang/spanish.txt
+++ b/install/lang/spanish.txt
@@ -48,6 +48,7 @@ Traducciones:
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
 - 正體中文(香港): 楊添明
+- türkçe: Mesut Akcan
 
 Ajustes Generales
 Desinstalar
