--- a/install/lang/swedish.txt
+++ b/install/lang/swedish.txt
@@ -48,6 +48,7 @@ ImDisk - Tack!
 - magyar: I. Horváth Ferenc
 - 한국어: 비너스걸💋 (VenusGirl)
 - 正體中文(香港): 楊添明
+- türkçe: Mesut Akcan
 
 Allmänna inställningar
 Avinstallera
